--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,6 @@ p {
 }
 
 .container {
-  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   padding: 24px;
@@ -54,7 +53,7 @@ footer {
  */
 .card-row {
   display: grid;
-  grid-template-columns: repeat(3, 32%);
+  grid-template-columns: repeat(4, 24%);
   justify-content: space-between;
 }
 
@@ -136,11 +135,18 @@ footer {
   height: 20px;
   width: 20px;
 }
-
+.addform {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 .form {
   display: flex;
-
   flex-direction: column;
   width: 200px;
   padding: 1rem;
+}
+.addform-card-row {
+  display: flex;
+  justify-content: space-around;
 }
