init router, starting routing, create login form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,3 +150,11 @@ footer {
   display: flex;
   justify-content: space-around;
 }
+
+.login-form {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
