--- a/client/src/App.css
+++ b/client/src/App.css
@@ -158,3 +158,7 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.login-input-form {
+  display: flex;
+  flex-direction: column;
+}
